--- a/views/index.hbs
+++ b/views/index.hbs
@@ -18,9 +18,11 @@
     <div class="container-fluid">
         <div class="row bg-dark">
             <nav class="navbar navbar-dark bg-dark">
-                <a class="nav-link active" href="/bogiReceived">Bogi Recived</a>
-                <a class="nav-link" href="/bogiFitment">Bogi Fitment Records</a>
-                <a class="nav-link" href="/showRecords">Show Record</a>
+                {{!-- <a class="nav-link active" href="/bogiReceived">Bogi Recived</a>
+                <a class="nav-link" href="/bogiFitment">Bogi Fitment Records</a> --}}
+                {{!-- <a class="nav-link" href="/showRecords">Show Record</a> --}}
+                <a class="nav-link" href="/coachLowerPosition">Coach Lower Position</a>
+                <a  class="nav-link" href="/showCoachLowerPosition">Show Coach Lower Positioin</a>
             </nav>
         </div>
         {{#if success}}
