--- a/views/bogi-fitment-records.hbs
+++ b/views/bogi-fitment-records.hbs
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Bogi Fitment</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
 </head>
 
@@ -15,9 +15,11 @@
     <div class="container-fluid">
         <div class="row bg-dark">
             <nav class="navbar navbar-dark bg-dark">
-                <a class="nav-link active" href="/bogiReceived">Bogi Recived</a>
-                <a class="nav-link" href="/bogiFitment">Bogi Fitment Records</a>
-                <a class="nav-link" href="/showRecords">Show Record</a>
+                {{!-- <a class="nav-link active" href="/bogiReceived">Bogi Recived</a>
+                <a class="nav-link" href="/bogiFitment">Bogi Fitment Records</a> --}}
+                <a class="nav-link" href="/coachLowerPosition">Coach Lower Position</a>
+                <a  class="nav-link" href="/showCoachLowerPosition">Show Coach Lower Positioin</a>
+                {{!-- <a class="nav-link" href="/showRecords">Show Record</a> --}}
             </nav>
         </div>
         {{#if success}}
@@ -97,7 +99,9 @@
                                 <td>{{coachQuantity}}</td>
                                 <td>{{date}}</td>
                                 <td id="status">{{fitmentStatus}}</td>
-                                <td><a class="updateLink" name="{{coachNumber}}" href="/updateBogiStatus?coachNumber={{coachNumber}}&status={{fitmentStatus}}">Update</a></td>
+                                <td><a class="updateLink" name="{{coachNumber}}"
+                                        href="/updateBogiStatus?coachNumber={{coachNumber}}&status={{fitmentStatus}}">Update</a>
+                                </td>
                             </tr>
                             {{/each}}
                         </tbody>
@@ -108,8 +112,8 @@
         </div>
     </div>
 
-    <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
-        aria-hidden="true">
+    <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
+        aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header">
@@ -131,22 +135,24 @@
                         </div>
                         <div class="form-group">
                             {{!-- <input type="hidden" name="bogiNumber" id="bogiNumber" value="{{coachNumber}}"> --}}
-                            <button  type="button" id="submitUpdateBogiForm" class="btn btn-primary">Submit</button>
+                            <button type="button" id="submitUpdateBogiForm" class="btn btn-primary">Submit</button>
                         </div>
                     </form>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    
+
                 </div>
             </div>
         </div>
     </div>
-    <script src="https://code.jquery.com/jquery-3.4.0.min.js" integrity="sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg="
+    <script src="https://code.jquery.com/jquery-3.4.0.min.js"
+        integrity="sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
         crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
     <script src="js/updateStatus.js"></script>
 </body>
