login and signup feature added

--- a/views/show-coach-lower-position.hbs
+++ b/views/show-coach-lower-position.hbs
@@ -8,6 +8,7 @@
     <title>Show Record</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/common.css">
 
 </head>
 
@@ -18,11 +19,11 @@
                 {{!-- <a class="nav-link active" href="/bogiReceived">Bogi Recived</a>
                 <a class="nav-link" href="/bogiFitment">Bogi Fitment Records</a> --}}
                 {{!-- <a class="nav-link" href="/showRecords">Show Record</a> --}}
-                <a class="nav-link" href="/coachLowerPosition">Coach Lower Position</a>
+                {{!-- <a class="nav-link" href="/coachLowerPosition">Coach Lower Position</a> --}}
                 <a class="nav-link" href="/showCoachLowerPosition">Show Coach Lower Positioin</a>
             </nav>
         </div>
-      
+
         <div class="row" style="margin-top:2%">
 
             <div class="col-md-8 offset-md-2">
